Milestone project 2 , initial code complete for predict sample rcts

--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -5830,11 +5830,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1ujEO7zln9p4",
-        "outputId": "3efb9304-fb2d-437f-d877-c886676c6a1a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1ujEO7zln9p4",
+        "outputId": "3efb9304-fb2d-437f-d877-c886676c6a1a"
       },
       "source": [
         "# Make predictions on online RCT abstracts\n",
@@ -5914,11 +5914,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EBw3vQ7bsQ9t",
-        "outputId": "2049a578-d781-4c21-f901-d5370f927540",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EBw3vQ7bsQ9t",
+        "outputId": "2049a578-d781-4c21-f901-d5370f927540"
       },
       "source": [
         "abstract_samples = preprocess_sample_text_with_line_numbers(\"/content/skimlit_example_abstracts.json\")\n",
@@ -5972,37 +5972,331 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3wctrVseuDAT",
-        "outputId": "613aa512-1b0e-4d8b-ef88-a71f695aab96",
+        "id": "o6o__ezd1OpL",
+        "outputId": "a651d1d1-c83a-49c4-8bb0-e6807ff9608c",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 204
         }
       },
       "source": [
-        "# take first example and split the data to lines\n",
-        "test_abstract = jdata[0][\"abstract\"]\n",
-        "test_abstract.split(\". \")"
+        "import pandas as pd\n",
+        "sample_df = pd.DataFrame(abstract_samples)\n",
+        "sample_df.head()"
       ],
-      "execution_count": 181,
+      "execution_count": 185,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>text</th>\n",
+              "      <th>line_number</th>\n",
+              "      <th>total_lines</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>this rct examined the efficacy of a manualized...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>participants were randomly assigned to treatme...</td>\n",
+              "      <td>1</td>\n",
+              "      <td>8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>treatment included instruction and therapeutic...</td>\n",
+              "      <td>2</td>\n",
+              "      <td>8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>a response-cost program was applied to reduce ...</td>\n",
+              "      <td>3</td>\n",
+              "      <td>8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>significant treatment effects were found for f...</td>\n",
+              "      <td>4</td>\n",
+              "      <td>8</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
             "text/plain": [
-              "['This RCT examined the efficacy of a manualized social intervention for children with HFASDs',\n",
-              " 'Participants were randomly assigned to treatment or wait-list conditions',\n",
-              " 'Treatment included instruction and therapeutic activities targeting social skills, face-emotion recognition, interest expansion, and interpretation of non-literal language',\n",
-              " 'A response-cost program was applied to reduce problem behaviors and foster skills acquisition',\n",
-              " 'Significant treatment effects were found for five of seven primary outcome measures (parent ratings and direct child measures)',\n",
-              " 'Secondary measures based on staff ratings (treatment group only) corroborated gains reported by parents',\n",
-              " 'High levels of parent, child and staff satisfaction were reported, along with high levels of treatment fidelity',\n",
-              " 'Standardized effect size estimates were primarily in the medium and large ranges and favored the treatment group.']"
+              "                                                text  line_number  total_lines\n",
+              "0  this rct examined the efficacy of a manualized...            0            8\n",
+              "1  participants were randomly assigned to treatme...            1            8\n",
+              "2  treatment included instruction and therapeutic...            2            8\n",
+              "3  a response-cost program was applied to reduce ...            3            8\n",
+              "4  significant treatment effects were found for f...            4            8"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 181
+          "execution_count": 185
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s27NZzgX1YAv",
+        "outputId": "baaf60e8-6a33-4788-eb2d-30f0dede0fa9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "sample_sentences = sample_df[\"text\"].to_list()\n",
+        "sample_chars = [split_chars(sentence) for sentence in sample_sentences]\n",
+        "sample_line_numbers_one_hot =tf.one_hot(sample_df[\"line_number\"].to_numpy(), depth=15)\n",
+        "sample_total_lines_one_hot  = tf.one_hot(sample_df[\"total_lines\"].to_numpy(), depth=20)\n",
+        "\n",
+        "# Create sample (with all four kinds of input data)\n",
+        "sample_char_token_pos_dataset = tf.data.Dataset.from_tensor_slices((sample_line_numbers_one_hot, \n",
+        "                                                                 sample_total_lines_one_hot, \n",
+        "                                                                 sample_sentences, \n",
+        "                                                                 sample_chars))\n",
+        "\n",
+        "sample_char_token_pos_dataset = sample_char_token_pos_dataset.batch(32).prefetch(tf.data.AUTOTUNE)\n",
+        "sample_char_token_pos_dataset"
+      ],
+      "execution_count": 188,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<PrefetchDataset shapes: ((None, 15), (None, 20), (None,), (None,)), types: (tf.float32, tf.float32, tf.string, tf.string)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 188
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UOMXkZ7R1fpF",
+        "outputId": "bd67ff06-aad1-446a-e49d-26921e87ae56",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Make predictions on sample abstract features\n",
+        "%%time\n",
+        "test_abstract_pred_probs = loaded_gs_model.predict(x=(sample_line_numbers_one_hot,\n",
+        "                                                   sample_total_lines_one_hot,\n",
+        "                                                   tf.constant(sample_sentences),\n",
+        "                                                   tf.constant(sample_chars)))\n",
+        "test_abstract_pred_probs"
+      ],
+      "execution_count": 190,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "CPU times: user 2.23 s, sys: 66.2 ms, total: 2.3 s\n",
+            "Wall time: 2.27 s\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "56upZl9c4q5N",
+        "outputId": "8ccb8ade-b6bb-41f8-f1fc-087464396541",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Turn prediction probabilities into prediction classes\n",
+        "test_abstract_preds = tf.argmax(test_abstract_pred_probs, axis=1)\n",
+        "test_abstract_preds"
+      ],
+      "execution_count": 192,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(41,), dtype=int64, numpy=\n",
+              "array([3, 2, 2, 2, 4, 2, 4, 4, 3, 0, 2, 2, 2, 4, 2, 4, 1, 1, 0, 0, 0, 2,\n",
+              "       1, 1, 1, 1, 1, 1, 0, 0, 0, 2, 3, 2, 4, 2, 4, 4, 1, 1, 1])>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 192
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YZ1tEBpX5vYW",
+        "outputId": "343130b8-0ced-4149-909d-e965809aa345",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Turn prediction class integers into string class names\n",
+        "test_abstract_pred_classes = [label_encoder.classes_[i] for i in test_abstract_preds]\n",
+        "test_abstract_pred_classes"
+      ],
+      "execution_count": 193,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['OBJECTIVE',\n",
+              " 'METHODS',\n",
+              " 'METHODS',\n",
+              " 'METHODS',\n",
+              " 'RESULTS',\n",
+              " 'METHODS',\n",
+              " 'RESULTS',\n",
+              " 'RESULTS',\n",
+              " 'OBJECTIVE',\n",
+              " 'BACKGROUND',\n",
+              " 'METHODS',\n",
+              " 'METHODS',\n",
+              " 'METHODS',\n",
+              " 'RESULTS',\n",
+              " 'METHODS',\n",
+              " 'RESULTS',\n",
+              " 'CONCLUSIONS',\n",
+              " 'CONCLUSIONS',\n",
+              " 'BACKGROUND',\n",
+              " 'BACKGROUND',\n",
+              " 'BACKGROUND',\n",
+              " 'METHODS',\n",
+              " 'CONCLUSIONS',\n",
+              " 'CONCLUSIONS',\n",
+              " 'CONCLUSIONS',\n",
+              " 'CONCLUSIONS',\n",
+              " 'CONCLUSIONS',\n",
+              " 'CONCLUSIONS',\n",
+              " 'BACKGROUND',\n",
+              " 'BACKGROUND',\n",
+              " 'BACKGROUND',\n",
+              " 'METHODS',\n",
+              " 'OBJECTIVE',\n",
+              " 'METHODS',\n",
+              " 'RESULTS',\n",
+              " 'METHODS',\n",
+              " 'RESULTS',\n",
+              " 'RESULTS',\n",
+              " 'CONCLUSIONS',\n",
+              " 'CONCLUSIONS',\n",
+              " 'CONCLUSIONS']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 193
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ypV7zjUp45Uc",
+        "outputId": "19f94405-2bfe-40f5-a257-7630ac5d70a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "for i, line in enumerate(sample_sentences):\n",
+        "  print(f\"{test_abstract_pred_classes[i]}: {line}\")"
+      ],
+      "execution_count": 194,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "OBJECTIVE: this rct examined the efficacy of a manualized social intervention for children with hfasds\n",
+            "METHODS: participants were randomly assigned to treatment or wait-list conditions\n",
+            "METHODS: treatment included instruction and therapeutic activities targeting social skills, face-emotion recognition, interest expansion, and interpretation of non-literal language\n",
+            "METHODS: a response-cost program was applied to reduce problem behaviors and foster skills acquisition\n",
+            "RESULTS: significant treatment effects were found for five of seven primary outcome measures (parent ratings and direct child measures)\n",
+            "METHODS: secondary measures based on staff ratings (treatment group only) corroborated gains reported by parents\n",
+            "RESULTS: high levels of parent, child and staff satisfaction were reported, along with high levels of treatment fidelity\n",
+            "RESULTS: standardized effect size estimates were primarily in the medium and large ranges and favored the treatment group.\n",
+            "OBJECTIVE: postpartum depression (ppd) is the most prevalent mood disorder associated with childbirth\n",
+            "BACKGROUND: no single cause of ppd has been identified, however the increased risk of nutritional deficiencies incurred through the high nutritional requirements of pregnancy may play a role in the pathology of depressive symptoms\n",
+            "METHODS: three nutritional interventions have drawn particular interest as possible non-invasive and cost-effective prevention and/or treatment strategies for ppd; omega-3 (n-3) long chain polyunsaturated fatty acids (lcpufa), vitamin d and overall diet\n",
+            "METHODS: we searched for meta-analyses of randomised controlled trials (rct's) of nutritional interventions during the perinatal period with ppd as an outcome, and checked for any trials published subsequently to the meta-analyses\n",
+            "METHODS: fish oil: eleven rct's of prenatal fish oil supplementation rct's show null and positive effects on ppd symptoms\n",
+            "RESULTS: vitamin d: no relevant rct's were identified, however seven observational studies of maternal vitamin d levels with ppd outcomes showed inconsistent associations\n",
+            "METHODS: diet: two australian rct's with dietary advice interventions in pregnancy had a positive and null result on ppd\n",
+            "RESULTS: with the exception of fish oil, few rct's with nutritional interventions during pregnancy assess ppd\n",
+            "CONCLUSIONS: further research is needed to determine whether nutritional intervention strategies during pregnancy can protect against symptoms of ppd\n",
+            "CONCLUSIONS: given the prevalence of ppd and ease of administering ppd measures, we recommend future prenatal nutritional rct's include ppd as an outcome.\n",
+            "BACKGROUND: mental illness, including depression, anxiety and bipolar disorder, accounts for a significant proportion of global disability and poses a substantial social, economic and heath burden\n",
+            "BACKGROUND: treatment is presently dominated by pharmacotherapy, such as antidepressants, and psychotherapy, such as cognitive behavioural therapy; however, such treatments avert less than half of the disease burden, suggesting that additional strategies are needed to prevent and treat mental disorders\n",
+            "BACKGROUND: there are now consistent mechanistic, observational and interventional data to suggest diet quality may be a modifiable risk factor for mental illness\n",
+            "METHODS: this review provides an overview of the nutritional psychiatry field\n",
+            "CONCLUSIONS: it includes a discussion of the neurobiological mechanisms likely modulated by diet, the use of dietary and nutraceutical interventions in mental disorders, and recommendations for further research\n",
+            "CONCLUSIONS: potential biological pathways related to mental disorders include inflammation, oxidative stress, the gut microbiome, epigenetic modifications and neuroplasticity\n",
+            "CONCLUSIONS: consistent epidemiological evidence, particularly for depression, suggests an association between measures of diet quality and mental health, across multiple populations and age groups; these do not appear to be explained by other demographic, lifestyle factors or reverse causality\n",
+            "CONCLUSIONS: our recently published intervention trial provides preliminary clinical evidence that dietary interventions in clinically diagnosed populations are feasible and can provide significant clinical benefit\n",
+            "CONCLUSIONS: furthermore, nutraceuticals including n-3 fatty acids, folate, s-adenosylmethionine, n-acetyl cysteine and probiotics, among others, are promising avenues for future research\n",
+            "CONCLUSIONS: continued research is now required to investigate the efficacy of intervention studies in large cohorts and within clinically relevant populations, particularly in patients with schizophrenia, bipolar and anxiety disorders.\n",
+            "BACKGROUND: hepatitis c virus (hcv) and alcoholic liver disease (ald), either alone or in combination, count for more than two thirds of all liver diseases in the western world\n",
+            "BACKGROUND: there is no safe level of drinking in hcv-infected patients and the most effective goal for these patients is total abstinence\n",
+            "BACKGROUND: baclofen, a gaba(b) receptor agonist, represents a promising pharmacotherapy for alcohol dependence (ad)\n",
+            "METHODS: previously, we performed a randomized clinical trial (rct), which demonstrated the safety and efficacy of baclofen in patients affected by ad and cirrhosis\n",
+            "OBJECTIVE: the goal of this post-hoc analysis was to explore baclofen's effect in a subgroup of alcohol-dependent hcv-infected cirrhotic patients\n",
+            "METHODS: any patient with hcv infection was selected for this analysis\n",
+            "RESULTS: among the 84 subjects randomized in the main trial, 24 alcohol-dependent cirrhotic patients had a hcv infection; 12 received baclofen 10mg t.i.d\n",
+            "METHODS: and 12 received placebo for 12-weeks\n",
+            "RESULTS: with respect to the placebo group (3/12, 25.0%), a significantly higher number of patients who achieved and maintained total alcohol abstinence was found in the baclofen group (10/12, 83.3%; p=0.0123)\n",
+            "RESULTS: furthermore, in the baclofen group, compared to placebo, there was a significantly higher increase in albumin values from baseline (p=0.0132) and a trend toward a significant reduction in inr levels from baseline (p=0.0716)\n",
+            "CONCLUSIONS: in conclusion, baclofen was safe and significantly more effective than placebo in promoting alcohol abstinence, and improving some liver function tests (lfts) (i.e\n",
+            "CONCLUSIONS: albumin, inr) in alcohol-dependent hcv-infected cirrhotic patients\n",
+            "CONCLUSIONS: baclofen may represent a clinically relevant alcohol pharmacotherapy for these patients.\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
