292. Downloading and inspecting our Bitcoin historical dataset

--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict",
       "provenance": [],
-      "authorship_tag": "ABX9TyPAHVc8u5xREi1fRHmpjYs1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,8 +33,451 @@
         "id": "-8fbclEDHYdu"
       },
       "source": [
-        "001"
+        "#Time series forecasting fundamentals with TensorFlow + Milestone Project 3 : BitPredict\n",
+        "\n",
+        "Let's write some TensorFlow code to predict the price of Bitcoin based on the historical price of Bitcoin.\n",
+        "\n",
+        "**Note** : This is not a financial advice.\n",
+        "\n",
+        "Links to understand some practical references:-\n",
+        "* All resources : https://github.com/mrdbourke/tensorflow-deep-learning\n",
+        "\n",
+        "* https://dev.mrdbourke.com/tensorflow-deep-learning/\n",
+        "\n",
+        "* https://eng.uber.com/forecasting-introduction/"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "D38ymGfJyu6X"
+      },
+      "source": [
+        "## Get data\n",
+        "\n",
+        "We're going to be using the historical price data of Bitcoin to try and predict the future price of Bitcoin, we downloaded the data from here :\n",
+        "https://www.coindesk.com/price/bitcoin"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pXzwwRs31NcH",
+        "outputId": "c8a3f972-4b26-4763-b567-da2fc08baacd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!nvidia-smi -L"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "GPU 0: Tesla T4 (UUID: GPU-6588e6d3-da35-2cff-9d01-cde8a623075b)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BJrmbW190k5V",
+        "outputId": "6ff05b96-6db6-4fbb-ad29-529a5a101d26",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!wget https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/BTC_USD_2013-10-01_2021-05-18-CoinDesk.csv"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2021-08-15 17:18:34--  https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/BTC_USD_2013-10-01_2021-05-18-CoinDesk.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 178509 (174K) [text/plain]\n",
+            "Saving to: ‘BTC_USD_2013-10-01_2021-05-18-CoinDesk.csv’\n",
+            "\n",
+            "\r          BTC_USD_2   0%[                    ]       0  --.-KB/s               \rBTC_USD_2013-10-01_ 100%[===================>] 174.33K  --.-KB/s    in 0.01s   \n",
+            "\n",
+            "2021-08-15 17:18:35 (13.5 MB/s) - ‘BTC_USD_2013-10-01_2021-05-18-CoinDesk.csv’ saved [178509/178509]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mNq5PW4X0u5x"
+      },
+      "source": [
+        "## Importing time series with pandas"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nfT8dF9j1XEE",
+        "outputId": "3516ae45-fd4d-4626-d8dd-cfc850d4ced5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 235
+        }
+      },
+      "source": [
+        "# Import with pandas\n",
+        "import pandas as pd\n",
+        "# Let's read in our Bitcoin data and parse the dates\n",
+        "df = pd.read_csv(\"/content/BTC_USD_2013-10-01_2021-05-18-CoinDesk.csv\",\n",
+        "                 parse_dates=[\"Date\"],\n",
+        "                 index_col=[\"Date\"]) # parse the date column and tell pandas column 1 is a datetime\n",
+        "df.head()"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Currency</th>\n",
+              "      <th>Closing Price (USD)</th>\n",
+              "      <th>24h Open (USD)</th>\n",
+              "      <th>24h High (USD)</th>\n",
+              "      <th>24h Low (USD)</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Date</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2013-10-01</th>\n",
+              "      <td>BTC</td>\n",
+              "      <td>123.65499</td>\n",
+              "      <td>124.30466</td>\n",
+              "      <td>124.75166</td>\n",
+              "      <td>122.56349</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2013-10-02</th>\n",
+              "      <td>BTC</td>\n",
+              "      <td>125.45500</td>\n",
+              "      <td>123.65499</td>\n",
+              "      <td>125.75850</td>\n",
+              "      <td>123.63383</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2013-10-03</th>\n",
+              "      <td>BTC</td>\n",
+              "      <td>108.58483</td>\n",
+              "      <td>125.45500</td>\n",
+              "      <td>125.66566</td>\n",
+              "      <td>83.32833</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2013-10-04</th>\n",
+              "      <td>BTC</td>\n",
+              "      <td>118.67466</td>\n",
+              "      <td>108.58483</td>\n",
+              "      <td>118.67500</td>\n",
+              "      <td>107.05816</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2013-10-05</th>\n",
+              "      <td>BTC</td>\n",
+              "      <td>121.33866</td>\n",
+              "      <td>118.67466</td>\n",
+              "      <td>121.93633</td>\n",
+              "      <td>118.00566</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "           Currency  Closing Price (USD)  ...  24h High (USD)  24h Low (USD)\n",
+              "Date                                      ...                               \n",
+              "2013-10-01      BTC            123.65499  ...       124.75166      122.56349\n",
+              "2013-10-02      BTC            125.45500  ...       125.75850      123.63383\n",
+              "2013-10-03      BTC            108.58483  ...       125.66566       83.32833\n",
+              "2013-10-04      BTC            118.67466  ...       118.67500      107.05816\n",
+              "2013-10-05      BTC            121.33866  ...       121.93633      118.00566\n",
+              "\n",
+              "[5 rows x 5 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vhvyZjLs2SqM",
+        "outputId": "6107f56e-53f9-4f6e-95db-69e9e1837cc2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "df.info()"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "DatetimeIndex: 2787 entries, 2013-10-01 to 2021-05-18\n",
+            "Data columns (total 5 columns):\n",
+            " #   Column               Non-Null Count  Dtype  \n",
+            "---  ------               --------------  -----  \n",
+            " 0   Currency             2787 non-null   object \n",
+            " 1   Closing Price (USD)  2787 non-null   float64\n",
+            " 2   24h Open (USD)       2787 non-null   float64\n",
+            " 3   24h High (USD)       2787 non-null   float64\n",
+            " 4   24h Low (USD)        2787 non-null   float64\n",
+            "dtypes: float64(4), object(1)\n",
+            "memory usage: 130.6+ KB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3Idb-62L2W5e",
+        "outputId": "4a49c2f3-b0ad-483f-d447-00e831822856",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# How many samples do we have ?\n",
+        "len(df)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2787"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zkGYWQXQ4jZw",
+        "outputId": "aba95c77-dcad-4389-f6c0-31897212e386",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 235
+        }
+      },
+      "source": [
+        "df.tail()"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Currency</th>\n",
+              "      <th>Closing Price (USD)</th>\n",
+              "      <th>24h Open (USD)</th>\n",
+              "      <th>24h High (USD)</th>\n",
+              "      <th>24h Low (USD)</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Date</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2021-05-14</th>\n",
+              "      <td>BTC</td>\n",
+              "      <td>49764.132082</td>\n",
+              "      <td>49596.778891</td>\n",
+              "      <td>51448.798576</td>\n",
+              "      <td>46294.720180</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2021-05-15</th>\n",
+              "      <td>BTC</td>\n",
+              "      <td>50032.693137</td>\n",
+              "      <td>49717.354353</td>\n",
+              "      <td>51578.312545</td>\n",
+              "      <td>48944.346536</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2021-05-16</th>\n",
+              "      <td>BTC</td>\n",
+              "      <td>47885.625255</td>\n",
+              "      <td>49926.035067</td>\n",
+              "      <td>50690.802950</td>\n",
+              "      <td>47005.102292</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2021-05-17</th>\n",
+              "      <td>BTC</td>\n",
+              "      <td>45604.615754</td>\n",
+              "      <td>46805.537852</td>\n",
+              "      <td>49670.414174</td>\n",
+              "      <td>43868.638969</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2021-05-18</th>\n",
+              "      <td>BTC</td>\n",
+              "      <td>43144.471291</td>\n",
+              "      <td>46439.336570</td>\n",
+              "      <td>46622.853437</td>\n",
+              "      <td>42102.346430</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "           Currency  Closing Price (USD)  ...  24h High (USD)  24h Low (USD)\n",
+              "Date                                      ...                               \n",
+              "2021-05-14      BTC         49764.132082  ...    51448.798576   46294.720180\n",
+              "2021-05-15      BTC         50032.693137  ...    51578.312545   48944.346536\n",
+              "2021-05-16      BTC         47885.625255  ...    50690.802950   47005.102292\n",
+              "2021-05-17      BTC         45604.615754  ...    49670.414174   43868.638969\n",
+              "2021-05-18      BTC         43144.471291  ...    46622.853437   42102.346430\n",
+              "\n",
+              "[5 rows x 5 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JVX56RZt4y_B"
+      },
+      "source": [
+        "We've collected the historical price of Bitcoin for the past ~8 years but there's 2787 samples.\n",
+        "\n",
+        "Typically deep learning models usually like lots and lots and lots of samples (where lots and lots and lots can thousands to tens of thousands to millions)\n",
+        "\n",
+        "A smaller number of samples is something you'll often run into with time series data problems.\n",
+        "\n",
+        "> **Note** : The **seasonality** of a time series dataset is referred as the number of samples per year. So for our Bitcoin data, it has a seasonality of daily or value of 365 because we collect one samples per dat meaning we'll get 365 samples per year."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PxlCEtuU4lHq",
+        "outputId": "907bfffb-01b7-490b-db33-58aff88d07b2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "8 *365"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2920"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hy8Zr7pa5P4R"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
