299. Discussing the various modelling experiments were going to be running

--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -938,12 +938,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NO76SdYLKVIU",
-        "outputId": "c2b6ede4-047f-48c1-829c-55d129bfd2a6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 442
-        }
+        },
+        "id": "NO76SdYLKVIU",
+        "outputId": "c2b6ede4-047f-48c1-829c-55d129bfd2a6"
       },
       "source": [
         "# Test our plotting function\n",
@@ -966,6 +966,34 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "p6dZxLb3UPwu"
+      },
+      "source": [
+        "## Modelling Experiments\n",
+        "\n",
+        "We've got some Bitcoin historical data, to model it, let's run a series of modelling experiments and see which model performs best.\n",
+        "\n",
+        "Terms to be familiar with :\n",
+        "* **Horizon** = number of timesteps into the u=future we're going to predict\n",
+        "* Window size = number of timesteps we're going to use to predict **horizon**\n",
+        "\n",
+        "Modelling experiments we're running :-\n",
+        "* 0\tNaïve model (baseline)\n",
+        "* 1\tDense model,\thorizon = 1, window = 7\n",
+        "* 2\tSame as 1,\thorizon = 1, window =\t30\n",
+        "* 3\tSame as 1,\thorizon = 7, window =\t30\n",
+        "* 4\tConv1D\n",
+        "* 5\tLSTM\n",
+        "* 6\tSame as 1 (but with multivariate data)\n",
+        "* 7\tN-BEATs Algorithm\n",
+        "* 8\tEnsemble (multiple models optimized on different loss functions)\n",
+        "* 9\tFuture prediction model (model to predict future values)\n",
+        "* 10\tSame as 1 (but with turkey 🦃 data introduced)"
       ]
     },
     {
